# ReliableUdp_Client

./: .gitignore  .gitignore~  AbstractReceiver.h  CMakeLists.txt  Checksum.cpp  Checksum.h  ClientSocket.cpp  ClientSocket.h  FileTransfer.cpp  FileTransfer.h  FileWriter.cpp  FileWriter.h  GbnReceiver.cpp  GbnReceiver.h  MainSocket.cpp  MainSocket.h  README.md  Serializer.cpp  Serializer.h  SocketClient.cpp  SocketClient.h  client_config.h  globaldefs.h  main.cpp
libs/: AckPacket.cpp  AckPacket.h  DataPacket.cpp  DataPacket.h  ack_packet.h  data_packet.h  netutils.c  netutils.h
